Fixed input fields gaps in contacts slide and gaps in about me page

--- a/src/home_page/about_me_slide/about_me_slide_styles.scss
+++ b/src/home_page/about_me_slide/about_me_slide_styles.scss
@@ -20,25 +20,19 @@
     flex-shrink: 1;
     flex-grow: 1;
     display: flex;
-    width: 100%;
-    gap: 128px;    
+    width: 100%;    
     align-items: center;
     
     @include breakpoint(tablet) {
       margin-top: 16px;
       flex-direction: column;
-      align-items: flex-start;
-      gap: 64px;
+      align-items: flex-start;      
     }
 
-    @include breakpoint(mobile) {
-      gap: 32px;
-    }        
-
-    .personal_info {
+    .personal_info {      
       display: flex;
       flex-direction: column;
-      align-items: flex-start;      
+      align-items: flex-start;
 
       .heading {
         font-size: 24px;
@@ -78,6 +72,7 @@
     }
     
     img {
+      margin-left: 128px;
       flex-grow: 1;
       height: 70%;
       object-fit: cover;
@@ -86,12 +81,15 @@
       box-shadow: 4px 4px 4px rgba(black, 0.4);
   
       @include breakpoint(tablet) {
+        margin-left: 0px;
+        margin-top: 64px;
         flex-grow: unset;
         width: 100%;
         height: 360px;
       }
 
       @include breakpoint(mobile) {
+        margin-top: 32px;
         height: 160px;
       }
     }
